# dash_in_flask

./: .gitignore  Dockerfile  README.md  app.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
_app/: dash.py
dash1/: __init__.py  callbacks.py  dashapp.py  layout.py
dash2/: __init__.py  callbacks.py  dashapp.py  layout.py
templates/: base.html
templates/pages/: home.html  page1.html  page2.html
web/: urls.py  views.py
